# reinforcetrade

./: .gitignore  get_hist_stocks.py  pyproject.toml
data/: historical_stocks.csv
extract/: get_hist_stocks.py
